更新 Park2025Analysing 链接

--- a/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
+++ b/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
@@ -35,7 +35,7 @@ These findings offer insights into the structure of NAC token sequences and info
 
 Speech discretisation allows models to take advantage of powerful sequence modelling techniques originally developed in natural language processing (NLP).
 Among such methods, neural audio codec (NAC) models have recently emerged as highly effective tools for modelling speech.
-They are capable of producing fine-grained token sequences capturing acoustic details essential for tasks such as automatic speech recognition (ASR), speech synthesis, and spoken language understanding~\cite{guo2025recent, borsos23}.
+They are capable of producing fine-grained token sequences capturing acoustic details essential for tasks such as automatic speech recognition (ASR), speech synthesis, and spoken language understanding [^Guo2025Recent] [^Borsos2022AudioLM].
 
 While NAC models have primarily been designed for efficient waveform compression and high-fidelity audio reconstruction, they are increasingly being integrated into generative and representation learning frameworks.
 Specifically, a speech token sequence derived from a pretrained NAC model serves as intermediate representations for downstream speech processing tasks.
@@ -58,17 +58,17 @@ An NAC model segments input audio into short frames and assigns each a symbolic 
 
 Initially, self-supervised learning (SSL) models played a pivotal role in advancing speech tokenization.
 These models learn to produce discrete tokens directly from raw speech without relying on explicit phoneme labels or text transcriptions, by utilizing the discretisation methods such as $k$-means clustering.
-HuBERT~\cite{hsu2021hubert} and wav2vec 2.0~\cite{baevski2020wav2vec2} are well-known examples of these SSL models, whose token sequences have been shown to capture both phonetic and semantic information, thereby enhancing performance across a variety of speech processing tasks~\cite{Mohamed_2022}.
+HuBERT [^Hsu2021HuBERT] and wav2vec 2.0 [^Baevski2020Wav2Vec2.0] are well-known examples of these SSL models, whose token sequences have been shown to capture both phonetic and semantic information, thereby enhancing performance across a variety of speech processing tasks [^Mohamed2022Self].
 
-Building upon these foundations, NAC models, such as EnCodec~\cite{defossez2023high} and SoundStream~\cite{Zeghidour2021SoundStreamAE}, have further constructed the process with the explicit goal of speech resynthesis.
+Building upon these foundations, NAC models, such as **EnCodec**[^Defossez2022EnCodec] and **SoundStream**[^Zeghidour2021SoundStream], have further constructed the process with the explicit goal of speech resynthesis.
 NAC models were initially developed to compress audio for efficient data transmission by lowering the bitrate, encoding detailed acoustic information into compact token sequences.
 These models are optimized for efficient compression and high-fidelity waveform reconstruction, demonstrating high effectiveness in processing the audio.
 This emphasis on preserving fine-grained acoustic detail distinguishes NACs from SSL-based approaches and makes them particularly well-suited for generative speech tasks that require high-quality audio output.
 
 Moreover, NAC models have been successfully applied in a variety of downstream tasks.
-For example, in text-to-speech (TTS) synthesis, NAC tokens enable high-quality waveform generation from text-based inputs, contributing to improved audio fidelity and naturalness~\cite{defossez2023high, Zeghidour2021SoundStreamAE}.
-NACs have also been integrated into ASR pipelines, where compressed token representations facilitate efficient and accurate transcription while reducing computational costs~\cite{dhawan2024codec}.
-Furthermore, NAC models have been explored for speech separation tasks, operating directly in the compressed token space to achieve efficient source separation with lower computational requirements~\cite{yip2024towards}.
+For example, in text-to-speech (TTS) synthesis, NAC tokens enable high-quality waveform generation from text-based inputs, contributing to improved audio fidelity and naturalness [^Defossez2022EnCodec] [^Zeghidour2021SoundStream].
+NACs have also been integrated into ASR pipelines, where compressed token representations facilitate efficient and accurate transcription while reducing computational costs [^dhawan2024codec].
+Furthermore, NAC models have been explored for speech separation tasks, operating directly in the compressed token space to achieve efficient source separation with lower computational requirements [^yip2024towards].
 
 ### Statistical Laws of Language
 
@@ -76,7 +76,7 @@ In this study, we explore three primary statistical laws, models, and metrics in
 
 **Zipf's Law**:
 
-In linguistics and information theory, it is well established that the frequency distribution of words or character $n$-grams in natural language tends to follow Zipf's law~\cite{zipf1949human}, characterised by a few high-frequency elements and many low-frequency elements.
+In linguistics and information theory, it is well established that the frequency distribution of words or character $n$-grams in natural language tends to follow Zipf's law [^zipf1949human], characterised by a few high-frequency elements and many low-frequency elements.
 For example, the third most frequent word in an English document, "and," appears approximately one-third as often as the most frequent word, "the\footnote{https://www.cs.cmu.edu/˜cburch/words/top.html}."
 This relationship is given by the following power-law equation between the frequency rank $r$ of a word and its frequency $f(r)$:
 
@@ -89,11 +89,11 @@ $$
 where $a>0$ is a scaling constant and $\eta>0$ represents the sharpness or scaling properties of the distribution.
 
 An ideal Zipfian distribution typically has $\eta \approx 1$.
-Such distributions have been often observed not only in natural languages but also in animal communication systems and large language models, making $\eta$ a key indicator of the balance between redundancy and information efficiency~\cite{mandelbrot1953contribution, gelbukh2001zipf}.
+Such distributions have been often observed not only in natural languages but also in animal communication systems and large language models, making $\eta$ a key indicator of the balance between redundancy and information efficiency [^mandelbrot1953contribution] [^gelbukh2001zipf].
 
 **Heaps' Law**:
 
-To capture the properties of a natural language in terms of the uniqueness of vocabulary, analyses based on Heaps' law~\cite{heaps1978information} are also employed.
+To capture the properties of a natural language in terms of the uniqueness of vocabulary, analyses based on Heaps' law [^heaps1978information] are also employed.
 This law describes a sublinear relationship between the number of words in document $m$ and the vocabulary size $V(m)$, expressed as:
 
 $$
@@ -109,7 +109,7 @@ For lower $\beta$ values, the vocabulary growth is sublinear, reflecting a langu
 
 **Entropy and Redundancy**:
 
-Entropy, proposed by Shannon~\cite{shannon1951prediction}, is widely used as a measure of the diversity and unpredictability of information within a sequence and serves as a fundamental metric in evaluating linguistic systems and coding efficiency.
+Entropy, proposed by Shannon [^shannon1951prediction], is widely used as a measure of the diversity and unpredictability of information within a sequence and serves as a fundamental metric in evaluating linguistic systems and coding efficiency.
 The entropy $H$ of a token sequence is defined as:
 $$
 \begin{aligned}
@@ -141,11 +141,11 @@ A smaller value of $R$ indicates more efficient coding, reflecting lower redunda
 ### Statistical Linguistic Analysis of Speech Tokens
 
 There have been some previous attempts to analyse discrete speech tokens using this type of analysis.
-Takamichi et al.~\cite{takamichi2024learned} analysed whether speech tokens generated by SSL models follow Zipf's law, as observed in natural language text.
+Takamichi et al. [^takamichi2024learned] analysed whether speech tokens generated by SSL models follow Zipf's law, as observed in natural language text.
 Their investigation revealed that these tokens exhibit power-law behaviour, which suggests that speech tokens possess certain linguistic structural properties.
-Moreover, Sicherman et al.~\cite{Sicherman2023AnalysingDS} explored the interpretability and redundancy of SSL-based speech tokens and found a strong correlation between tokens and phonemes.
+Moreover, Sicherman et al. [^Sicherman2023AnalysingDS] explored the interpretability and redundancy of SSL-based speech tokens and found a strong correlation between tokens and phonemes.
 They introduced a method for identifying redundancies that can degrade the performance of language models, and they proposed techniques to reduce such redundancies, leading to improvements in downstream tasks like speech synthesis and generative spoken language modelling.
-With respect to NAC-based tokens, Liu et al.~\cite{liu2024visual} identified the challenge of inconsistency—different token sequences may be produced from the same speech input due to variations in the tokenization process.
+With respect to NAC-based tokens, Liu et al. [^liu2024visual] identified the challenge of inconsistency—different token sequences may be produced from the same speech input due to variations in the tokenization process.
 To address this, they introduced robust instruction-tuning strategies to enhance the consistency of tokens across different contexts, thereby improving the reliability of systems.
 
 ## 3·Experimental Setup
@@ -156,24 +156,24 @@ We thus aim to fill this gap by systematically analysing NAC token sequences to 
 <a id="tab:nac_models">
 Codec configuration comparison.
 "A--F" represents different NAC models, where
-- "A" is SpeechTokenizer~\cite{zhang2023speechtokenizer},
-- "B$\sim$" is AcademiCodec~\cite{yang2023hifi},
-- "C" is AudioDec~\cite{wu2023audiodec},
-- "D" is DAC~\cite{kumar2023high},
-- "E$\sim$" is EnCodec~\cite{defossez2023high},
-- "F$\sim$" is FunCodec~\cite{du2023funcodec}.
+- "A" is SpeechTokenizer [^Zhang2023SpeechTokenizer],
+- "B$\sim$" is AcademiCodec [^Yang2023HiFi-Codec],
+- "C" is AudioDec [^Wu2023AudioDec],
+- "D" is DAC [^Kumar2023DAC],
+- "E$\sim$" is EnCodec [^Defossez2022EnCodec],
+- "F$\sim$" is FunCodec [^Du2023FunCodec].
 
 $n_d$ represents the dimension size, SR represents the sample rate.
-The contents of this table are partially cited from~\cite{wu2024audiolanguagemodeling}.
+The contents of this table are partially cited from [^Wu2024Towards].
 </a>
 
 This study investigates whether speech tokens obtained from various NAC models exhibit statistical properties similar to those of natural language.
-For the NAC models, we adopt six open-source codec models, where each of these models was trained under distinct conditions, including differences in datasets and bitrates, resulting in a total of 15 unique codec configurations shown in Table ~[tab:nac_models](#tab:nac_models) for comparative analysis~\cite{wu2024audiolanguagemodeling}.
+For the NAC models, we adopt six open-source codec models, where each of these models was trained under distinct conditions, including differences in datasets and bitrates, resulting in a total of 15 unique codec configurations shown in Table  [tab:nac_models](#tab:nac_models) for comparative analysis [^Wu2024Towards].
 
-The extraction of token was conducted by the implementation of Codec-SUPERB~\cite{codecsuperb}.
+The extraction of token was conducted by the implementation of Codec-SUPERB [^codecsuperb].
 To ensure consistency across models, we employed a standardised procedure for token sequence extraction and preprocessing.
 The speech signal was fed into a pretrained NAC model to extract a speech token sequence using a uniform codebook size of 1,024 for each dimension.
-Each token represented a 20~ms segment of input speech.
+Each token represented a 20 ms segment of input speech.
 A deduplication process was also applied to eliminate consecutive repetitions of the same token, thereby preventing potential biases in the statistical analysis, particularly in $n$-gram distribution calculations.
 
 Furthermore, to account for differences in dimension sizes $n_d$ caused by varying codec configurations across NAC models, we implemented an adjustment procedure.
@@ -184,7 +184,7 @@ This effectively expands the overall codebook size while preserving the uniquene
 Additionally, we prepared extra tokens that represented "dimension start" and "dimension end" and concatenated them at the beginning and the end of token sequences for each dimension, respectively.
 This process aims to mitigate undesired effects caused by artificial token overlap across codebooks during analysis.
 
-The analysis was performed on 10 hours of single-speaker speech data for English (LJSpeech\footnote{\url{https://keithito.com/LJ-Speech-Dataset/}}) and Mandarin (Chinese CSS10~\cite{Park2019CSS10AC})
+The analysis was performed on 10 hours of single-speaker speech data for English (LJSpeech\footnote{\url{https://keithito.com/LJ-Speech-Dataset/}}) and Mandarin (Chinese CSS10 [^Park2019CSS10AC])
 in order to investigate the language dependency of token.
 We used the manual transcriptions annotated to the corpora, and normalised through morphological analysis to obtain ground-truth (GT) word sequences for comparison.
 
@@ -193,15 +193,15 @@ We used the manual transcriptions annotated to the corpora, and normalised throu
 ### Language-based Statistical Analyses
 
 For the speech token sequences obtained in this study, we generated $n$-gram sequences with $n = \{2, 3, 4, 6\}$ and conducted a series of statistical and structural analyses.
-Specifically, we evaluated the properties of the token sequences for each model on Zipf's law~\cite{zipf1949human}, Heaps' law~\cite{heaps1978information}, and calculations of entropy~\cite{shannon1951prediction} and redundancy.
+Specifically, we evaluated the properties of the token sequences for each model on Zipf's law [^zipf1949human], Heaps' law [^heaps1978information], and calculations of entropy [^shannon1951prediction] and redundancy.
 Each token sequences were compared by the natural language baseline, which is a word 1-gram.
 
 #### Token Frequency Distribution and Fit to Zipf's Law
 
-In this experiment, we computed the frequency distributions of token $n$-grams extracted from various NAC models and evaluated their fit to Zipf's law~\cite{zipf1949human} by analysing their rank-frequency distributions on a log-log scale.
+In this experiment, we computed the frequency distributions of token $n$-grams extracted from various NAC models and evaluated their fit to Zipf's law [^zipf1949human] by analysing their rank-frequency distributions on a log-log scale.
 
-For real-world data, when the tail is too heavy or too light, it is difficult to properly predict the shape of the data using general linear regression in Zipf's model~\cite{chan2024analyzinglanguagevisualtokens}.
-Thus, to robustly estimate the parameters of Zipf's law under such conditions, we employed the \texttt{powerlaw} library~\cite{clauset2009powerlaw}, which fits the rank-frequency data using the maximum likelihood estimate:
+For real-world data, when the tail is too heavy or too light, it is difficult to properly predict the shape of the data using general linear regression in Zipf's model [^chan2024analyzinglanguagevisualtokens].
+Thus, to robustly estimate the parameters of Zipf's law under such conditions, we employed the \texttt{powerlaw} library [^clauset2009powerlaw], which fits the rank-frequency data using the maximum likelihood estimate:
 $$
 \alpha = 1 + \frac{n}{\sum_{i=1}^{n} \log(x_i / x_{\min})},
 $$
@@ -210,7 +210,7 @@ where $x_i$ is the frequency of the $i$-th ranked token in the empirical distrib
 
 Here, $\alpha = \eta + 1$.
 Values of $\alpha$ approaching 2 indicate a close adherence to Zipf’s law.
-Also, the goodness-of-fit was evaluated using the Kolmogorov–Smirnov (KS) distance, where larger suggest deviation from linearity~\cite{KSdistance}.
+Also, the goodness-of-fit was evaluated using the Kolmogorov–Smirnov (KS) distance, where larger suggest deviation from linearity [^KSdistance].
 
 ![](fig/en_zh_eta_vs_ks.pdf)
 
@@ -220,26 +220,26 @@ Also, the goodness-of-fit was evaluated using the Kolmogorov–Smirnov (KS) dist
 
 <a id="fig:zipfs2">Comparison of $n$-gram distributions of the mean NAC token sequences with natural language reference (word 1-gram) for (a) English and (b) Chinese.</a>
 
-Figure~[fig:zipfs](#fig:zipfs) shows the results of the Zipf's law analysis.
+Figure [fig:zipfs](#fig:zipfs) shows the results of the Zipf's law analysis.
 In this figure, each small dot represents one NAC model configuration, while the large dots represent the mean position of each $n$-gram group, calculated by averaging $\alpha$ and KS values.
 Distances from each $n$-gram mean to the GT were calculated using Z-score normalisation and displayed in the figure legend.
-The token frequency and distribution including $\alpha$ and KS-distance values can be seen in Figure~[fig:zipfs2](#fig:zipfs2).
+The token frequency and distribution including $\alpha$ and KS-distance values can be seen in Figure [fig:zipfs2](#fig:zipfs2).
 For the mean NAC token, the entire token outputs from the model used in this study are stacked to represent the distribution of the entire token sequence in a single dimension, then divided by the total number of dimensions in the model, resulting in a normalized token with a codebook size of 1,024.
 
 It shows that 3-gram token sequences consistently provided the best fit across the NAC models, demonstrating the most linear behaviour and thus the strongest alignment with the Zipfian distribution.
 This indicates that, at the 3-gram level, NAC tokens exhibit a frequency distribution where high-frequency tokens are used relatively frequently while low-frequency tokens remain present, albeit at lower frequencies.
-This pattern holds for both English and Chinese data, as showing the linear distribution graph in Figure~[fig:zipfs2](#fig:zipfs2).
+This pattern holds for both English and Chinese data, as showing the linear distribution graph in Figure [fig:zipfs2](#fig:zipfs2).
 
 #### Token Novelty and Vocabulary Growth
 
-To evaluate the novelty of speech tokens, we conducted analyses based on Heaps' law~\cite{heaps1978information}.
+To evaluate the novelty of speech tokens, we conducted analyses based on Heaps' law [^heaps1978information].
 We analysed the natural language and the speech token sequences considering the token order, tracking the increase in unique tokens relative to the total number of tokens observed.
 
-In Figure~[fig:heaps](#fig:heaps), we estimated both the scaling factor $k$ and the growth exponent $\beta$ for each model and $n$-gram setting.
+In Figure [fig:heaps](#fig:heaps), we estimated both the scaling factor $k$ and the growth exponent $\beta$ for each model and $n$-gram setting.
 It is shown that 3-gram token sequences consistently display high similarities with those of natural language reference in both $k$ and $\beta$ values across both English and Chinese.
 Additionally, the variability of cluster assignment across different models was found to be substantial, indicating that some models tend to group tokens in ways that exhibit higher volatility, as reflected in the spread of $k$ and $\beta$ estimates.
 
-The results indicated that token sequences with higher $k$ values tended to exhibit sublinear growth, indicating repeated reuse of common tokens and reduced diversity, as shown in Figure~[fig:heaps2](#fig:heaps2).
+The results indicated that token sequences with higher $k$ values tended to exhibit sublinear growth, indicating repeated reuse of common tokens and reduced diversity, as shown in Figure [fig:heaps2](#fig:heaps2).
 Conversely, sequences with lower $k$ values displayed linear or near-linear growth, reflecting a more uniform introduction of new tokens.
 Furthermore, we observed that as $n$ increased, the complexity and diversity of the data also increased, leading to less repetitive patterns and larger vocabulary sizes.
 
@@ -259,7 +259,7 @@ Furthermore, we observed that as $n$ increased, the complexity and diversity of 
 The results for 1-gram NAC tokens are also shown.</a>
 
 Finally, we evaluated the entropy and compressibility of token sequences generated by NAC models and compared them with natural language sequences.
-Figure~[fig:entropy](#fig:entropy) shows the relationship between $n$-gram and the bit reduction rate.
+Figure [fig:entropy](#fig:entropy) shows the relationship between $n$-gram and the bit reduction rate.
 At the 1-gram level, natural language sequences exhibited a significantly higher bit reduction rate compared to NAC tokens.
 In contrast, NAC tokens displayed a relatively lower bit reduction rate at this level, suggesting a limited reuse of acoustic token patterns.
 
@@ -279,11 +279,11 @@ This suggests that the following $n$-gram distribution shows similar token distr
 This section investigates the relationship between the statistical properties of NAC tokens and speech performance benchmarks.
 We specifically examine whether tokens exhibiting more "language-like" statistics correlate with improved intelligibility (WER/CER) and naturalness (UTMOS).
 
-To evaluate this relationship, we used the Codec-SUPERB~\cite{codecsuperb} implementation to decode the NAC tokens back into speech waveforms, generating resynthesised speech outputs for each codec model under study.
-For the intelligibility task, we then applied \texttt{whisper-medium}~\cite{radford2022whisper} ASR model, to transcribe the synthetic speech.
+To evaluate this relationship, we used the Codec-SUPERB [^codecsuperb] implementation to decode the NAC tokens back into speech waveforms, generating resynthesised speech outputs for each codec model under study.
+For the intelligibility task, we then applied \texttt{whisper-medium} [^Radford2022Whisper] ASR model, to transcribe the synthetic speech.
 By comparing these ASR outputs with the GT transcripts provided in the corpus, we calculated word error rate (WER) for English and character error rate (CER) for Chinese using the Levenshtein distance.
 This provided a quantitative measure of how closely the resynthesised speech aligns with the original linguistic content.
-Also, we assessed the naturalness of the synthetic speech using UTMOS~\cite{saeki22c_interspeech}, speech quality assessment metric that estimates the perceived naturalness of speech based on neural network architectures trained on large-scale human-annotated datasets.
+Also, we assessed the naturalness of the synthetic speech using UTMOS [^Saeki2022UTMOS], speech quality assessment metric that estimates the perceived naturalness of speech based on neural network architectures trained on large-scale human-annotated datasets.
 By applying UTMOS to the resynthesised speech samples, we were able to derive pseudo-naturalness scores that reflect how naturally the speech would be perceived by listeners.
 These benchmarks collectively allow us to analyse whether the statistical regularities observed in token sequences meaningfully impact the performance of speech processing systems in real-world tasks.
 
@@ -297,7 +297,7 @@ The trendline was obtained by Pearson correlation coefficient $r$.</a>
 
 We utilized 3-gram token sequences against the benchmarks to investigate the relationship between token frequency and the performances in downstream tasks.
 
-Figure~[fig:Zipf_asr](#fig:Zipf_asr) shows scatter plots of $\alpha$ values derived from 3-gram token sequences against the benchmark performances.
+Figure [fig:Zipf_asr](#fig:Zipf_asr) shows scatter plots of $\alpha$ values derived from 3-gram token sequences against the benchmark performances.
 The results reveal a consistent trend: as $\alpha$ decreases, where approaching the Zipf's law's theoretical value of 2, error rates tend to decrease while UTMOS scores increase.
 In addition, it is showed that model configurations with large dimensions displayed lower error rates and higher UTMOS, while also demonstrating lower $\alpha$.
 This suggests that token sequences exhibiting Zipfian behaviour with high-frequency token usage correlate with improved speech recognition accuracy and perceived naturalness.
@@ -316,7 +316,7 @@ Each point represents each codec configurations, color-coded by dimension size $
 The trendline was obtained by Pearson correlation coefficient $r$.</a>
 
 We analysed the correspondence between the Heaps' law exponent $\beta$ and $k$—estimated from 3-gram token sequences—and speech benchmarks.
-Figure~[fig:heaps](#fig:heaps) shows scatter plots of $\beta$ values against the benchmark performances.
+Figure [fig:heaps](#fig:heaps) shows scatter plots of $\beta$ values against the benchmark performances.
 The results reveal a consistent trend: as $\beta$ approaches 1 (indicating a more linear growth of the vocabulary size with respect to the number of observed tokens), error rates (WER and CER) decrease, and UTMOS scores increase.
 It is also showed that model with a configurations of large dimensions displayed higher $\beta$.
 This finding suggests that token sequences exhibiting near-linear vocabulary growth—indicative of consistent token usage—correlate with improved speech recognition accuracy and perceived naturalness.
@@ -336,7 +336,7 @@ Each point represents each codec configurations, color-coded by dimension size $
 The trendline was obtained by Pearson correlation coefficient.</a>
 
 We analysed the bit reduction rate derived from 3-gram token sequences and its relationship with speech quality benchmarks.
-Figure~[fig:entropy_asr](#fig:entropy_asr) presents scatter plots showing these relationships.
+Figure [fig:entropy_asr](#fig:entropy_asr) presents scatter plots showing these relationships.
 The analysis reveals a consistent trend: as the bit reduction rate approaches zero—indicating that the token sequences are less compressible—error rates decrease and UTMOS scores increase.
 It is also showed that model with a configurations of large dimensions displayed lower bit reduction rate.
 This suggests that token sequences with lower redundancy and higher diversity are more closely aligned with the underlying structure of natural language and correspondingly support better speech quality.
@@ -350,3 +350,36 @@ Together, these results indicate that certain linguistic statistical properties 
 
 Beyond the contributions here, we believe that it is insightful to further explore the case of real-world, multi-speaker audio in noisy environments, and NACs designed for multilingual domains.
 We hope such explorations can yield further insights into how we can design token representations that balance linguistic regularity and acoustic detail, supporting high-quality speech generation and accurate language understanding.
+
+## 参考文献
+
+[^Guo2025Recent]: [**Survey20250210**: Recent Advances in Discrete Speech Tokens: A Review](../../Surveys/2025.02.10_Guo2025Recent.md). ArXiv:2502.06490.
+[^Borsos2022AudioLM]: [**AudioLM**: A Language Modeling Approach to Audio Generation](../SpeechLM/PureSpeechLM/2022.09.07_AudioLM.md). ArXiv:2209.03143/TASLP2023.
+[^Hsu2021HuBERT]: [**HuBERT**: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units](2021.06.14_HuBERT.md). ArXiv:2106.07447/TASLP2021.
+[^Baevski2020Wav2Vec2.0]: [**Wav2Vec 2.0**: A Framework for Self-Supervised Learning of Speech Representations](2020.06.20_Wav2Vec2.0.md). ArXiv:2006.11477/NeurIPS2020.
+[^Mohamed2022Self]: [**Survey20220521**: Self-Supervised Speech Representation Learning: A Review](../../Surveys/S20220521.md). ArXiv:2205.10643/JSTSP2022.
+[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
+[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec](2021.07.07_SoundStream.md). ArXiv:2107.03312/TASLP2021.
+[^dhawan2024codec]: Codec-ASR: Training performant automatic speech recognition systems with discrete speech representations.
+[^yip2024towards]: Towards audio codec-based speech separation.
+[^zipf1949human]: Human behavior and the principle of least effort.
+[^mandelbrot1953contribution]: Contribution `a la th´eorie math´ ematique des jeux de communication
+[^gelbukh2001zipf]: Zipf and heaps laws’ coefficients depend on language
+[^heaps1978information]: Information retrieval: Computational and theoretical aspects
+[^shannon1951prediction]: Prediction and entropy of printed english
+[^takamichi2024learned]: Do learned speech symbols follow Zipf’s law?
+[^Sicherman2023AnalysingDS]: Analysing discrete self supervised speech representation for spoken language modeling,
+[^liu2024visual]: Visual instruction tuning
+[^Zhang2023SpeechTokenizer]: [**Speechtokenizer**: Unified Speech Tokenizer for Speech Large Language Models](2023.08.31_SpeechTokenizer.md). ArXiv:2308.16692/ICLR2024.
+[^Yang2023HiFi-Codec]: [**HiFi-Codec**: Group-Residual Vector Quantization for High Fidelity Audio Codec](2023.05.04_HiFi-Codec.md). ArXiv:2305.02765.
+[^Wu2023AudioDec]: [**AudioDec**: An Open-Source Streaming High-Fidelity Neural Audio Codec](2023.05.26_AudioDec.md). ArXiv:2305.16608/ICASSP2023.
+[^Kumar2023DAC]: [**DAC**: High-Fidelity Audio Compression with Improved RVQGAN](2023.06.11_Descript-Audio-Codec.md). ArXiv:2306.06546/NeurIPS2023.
+[^Du2023FunCodec]: [**FunCodec**: A Fundamental, Reproducible and Integrable Open-Source Toolkit for Neural Speech Codec](2023.09.14_FunCodec.md). ArXiv:2309.07405/ICASSP2024.
+[^Wu2024Towards]: [**Survey20240220**: Towards Audio Language Modeling: An Overview](../../Surveys/S20240220.md). ArXiv:2402.13236.
+[^codecsuperb]: Codec-SUPERB: An in-depth analysis of sound codec models
+[^Park2019CSS10AC]: CSS10: A collection of single speaker speech datasets for 10 languages,
+[^chan2024analyzinglanguagevisualtokens]: Analyzing the language of visual tokens
+[^clauset2009powerlaw]: Power-law distributions in empirical data
+[^KSdistance]: The kolmogorov-smirnov test for goodness of fi
+[^Radford2022Whisper]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision](../-ASR/2022.12.06_Whisper.md). ArXiv:2212.04356/ICML2023.
+[^Saeki2022UTMOS]: [**UTMOS**: UTokyo-SaruLab System for VoiceMOS Challenge 2022](../../Evaluations/2022.04.05_UTMOS.md). ArXiv:2204.02152/InterSpeech2022.
