--- a/Models/SpeechLM_TTS/2025.09.02_FireRedTTS-2.md
+++ b/Models/SpeechLM_TTS/2025.09.02_FireRedTTS-2.md
@@ -141,3 +141,67 @@ The pretraining stage leverages 1.1M hours of monologue speech data and trains t
 Subsequently, we post-train FireRedTTS-2 for 5 epochs on 300k hours of multi-speaker dialogue data, with each dialogue containing 2 to 5 speakers, to enable robust multi-speaker dialogue generation.
 
 Finally, the SFT stage is applied to tailor the model to specific voices with minimal data.
+
+## 3·Downstream Applications
+
+FireRedTTS-2 excels at both monologue and dialogue speech generation.
+
+For monologues, it offers competitive zero-shot voice cloning suitable for tasks like video dubbing.
+
+For dialogues generation, it surpasses monologue TTS systems due to its perception of text and speech context, producing speech with coherent prosody.
+
+Compared with existing dialogue TTS systems, it supports sentence-by-sentence generation, enabling both interactive chat and offline podcast production.
+
+Across both modes, FireRedTTS-2 can be tailored to specific application requirements with minimal data, demonstrating strong flexibility.
+
+### Voice Cloning
+
+Our speech tokenizer captures both semantic and acoustic information, enabling fine-grained acoustic modeling.
+
+Paired with large-scale pretraining on monologue speech, it allows FireRedTTS-2 to deliver robust zero-shot voice cloning.
+
+Given a speech prompt and its transcript, we concatenate the prompt transcript, the target text to be synthesized, and the discretized prompt speech tokens, then feed this sequence into the text-to-speech model to autoregressively generate new speech tokens.
+
+The generated tokens are appended to the prompt tokens and decoded into a waveform by the speech tokenizer’s decoder, after which the portion corresponding to the original prompt is removed.
+
+### Interactive Chat
+
+Current interactive chat frameworks[^Huang2025Step-Audio], [^Huang2023AudioGPT] typically rely on monologue TTS systems, which lack perception of prior user queries and system responses, often resulting in inconsistent emotion and prosody.
+
+This can be partially mitigated with explicit instructions such as emotion labels, but it requires additional fine-tuning of the text LLM and adds unnecessary complexity.
+
+![](image/tts2_for_chat.png)
+
+<a id="img:tts2_for_chat">Integration of FireRedTTS-2 into interactive chat scenarios.</a>
+
+As shown in Figure [img:tts2_for_chat](#img:tts2_for_chat), FireRedTTS-2 can be seamlessly integrated into existing chat frameworks without modifying other modules.
+
+To address the inconsistency issue, we fine-tune the post-trained FireRedTTS-2 to infer and adjust emotion and prosody from implicit contextual cues.
+
+Specifically, we curate a 15-hour speech corpus of a distinctive female voice expressing six emotions: surprise, sadness, happiness, concern, apology, and anger.
+
+Then we emulate conversational context by first generating text context with a text LLM and then synthesizing it into speech.
+
+After fine-tuning, FireRedTTS-2 dynamically shifts emotion and tone in response to preceding chat history, delivering a near-human interactive experience.
+
+### Podcast Generation
+
+Subsequent post-training on dialogue corpus equips FireRedTTS-2 with conversational generation abilities, making it well-suited for podcast generation.
+
+Compared with conventional segmenting approaches that utlizes monologue TTS systems, it simplifies the workflow and can synthesizes contextually coherent prosody.
+
+Moreover, it generates dialogue speech sentence by sentence, providing greater flexibility for editing and post-processing.
+
+![](image/tts2_for_zeroshot_podcast.png)
+
+<a id="img:tts2_for_zeroshot_podcast">Zero-shot podcast generation of FireRedTTS-2.</a>
+
+As shown in Figure [img:tts2_for_zeroshot_podcast](#img:tts2_for_zeroshot_podcast), FireRedTTS-2 can perform zero-shot podcast generation by placing two dialogue turns as prompt context and then generating subsequent turns one by one.
+
+It currently supports 3 minutes dialogues with 4 speakers and can be easily scaled to longer conversations with more speakers by extending training corpus.
+
+It can also be tailored to specific speakers with minimal data.
+
+In this work, we collected approximately 50 hours of dialogue speech featuring a male and a female podcast host and fine-tuned the post-trained model for 15 epochs.
+
+Once customized,  FireRedTTS-2 delivers stable synthesis, accurate speaker transitions, and contextually coherent prosody that matches the hosts’ distinctive speaking styles.
