--- a/Models/-VC/2025.09.21_MaskVCT.md
+++ b/Models/-VC/2025.09.21_MaskVCT.md
@@ -297,7 +297,7 @@ In future work, we plan to address this limitation by training our own quantized
 [^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression](../Tokenizers/2022.10.24_EnCodec.md). ArXiv:2210.13438/TMLR2023.
 [^Ju2024NaturalSpeech3]: [**NaturalSpeech3/FACodec**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models](../Diffusion/2024.03.05_NaturalSpeech3.md). ArXiv:2403.03100v3/ICML2024.
 [^Vaswani2017Transformer]: [**Transformer**: Attention Is All You Need](../_Basis/2017.06.12_Transformer.md). ArXiv:1706.03762/NeurIPS2017.
-[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers](../SpeechLM/ST2S/2023.01.05_VALL-E.md). ArXiv:2301.02111/TASLP2025.
+[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers](../SpeechLM_TTS/2023.01.05_VALL-E.md). ArXiv:2301.02111/TASLP2025.
 [^Baade2024SyllableLM]: [**SyllableLM**: Learning Coarse Semantic Units for Speech Language Models](../SpeechLM/2024.10.05_SyllableLM.md). ArXiv:2410.04029.
 [^Ho2022CFG]: [**CFG**: Classifier-Free Diffusion Guidance](../Diffusion/_2022.07.26_Classifier-Free_Guidance.md). ArXiv:2207.12598v1/NeurIPS2021Workshop.
 [^Choi2024Self]: [Self-Supervised Speech Representations are More Phonetic than Semantic](../Tokenizers/_2024.06.12_Choi2024Self.md). ArXiv:2406.08619v1/InterSpeech2024.
