--- a/Models/SpeechLM_TTS/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM_TTS/2024.12.13_CosyVoice2.md
@@ -673,11 +673,11 @@ Additionally, CosyVoice does not perform well when tasked with singing.
 [^05]: [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)
 [^06]: [Transformer-TTS](../Acoustic/2018.09.19_TransformerTTS.md)
 [^07]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
-[^08]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^08]: [VALL-E](2023.01.05_VALL-E.md)
 [^09]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
 [^10]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
 [^11]: [FunCodec](../Tokenizers/2023.09.14_FunCodec.md)
-[^12]: [SPEAR-TTS](../SpeechLM/ST2S/2023.02.07_SPEAR-TTS.md)
+[^12]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
 [^13]: [ELLA-V](../../SpeechLM_TTS/2024.01.14_ELLA-V.md024.01.14_ELLA-V.md)
 [^14]: [VALL-T](../SpeechLM/ST2S/2024.01.25_VALL-T.md)
 [^15]: [RALL-E](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
@@ -700,7 +700,7 @@ Additionally, CosyVoice does not perform well when tasked with singing.
 [^32]: [F5-TTS](../../FlowMatching/2024.10.09_F5-TTS.md.md)
 [^33]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
 [^34]: [CosyVoice](2024.07.07_CosyVoice.md)
-[^35]: [FireRedTTS](../SpeechLM/2024.09.05_FireRedTTS.md)
+[^35]: [FireRedTTS](2024.09.05_FireRedTTS.md)
 [^36]: [GPT-4o](../SpeechLM/Interaction/2024.09.06_GPT-4o.md)
 [^37]: [SpeechGPT](../SpeechLM/Interaction/2023.05.18_SpeechGPT.md)
 [^38]: [LiveSpeech](../SpeechLM/2024.06.05_LiveSpeech.md)
