--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -300,7 +300,7 @@ We believe that the potential of flow matching in TTS research has yet to be dis
 [^Lipman2022FM]: [Flow Matching](_2022.10.06_Flow_Matching.md)
 [^Liu2022RectifiedFlow]: [Rectified Flow](_2022.09.07_RectifiedFlow.md)
 [^Tong2023CFM]: [CFM](_2023.02.01_Conditional_Flow_Matching.md)
-[^Le2023VoiceBox]: [VoiceBox](../Diffusion/2023.06.23_Voicebox.md)
+[^Le2023VoiceBox]: [VoiceBox](2023.06.23_Voicebox.md)
 [^Liu2023LinDiff]: [LinDiff](../Vocoder/2023.06.09_LinDiff.md)
 [^Ito2017LJSpeech]: [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
 [^Zen2019LibriTTS]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
